fix padding top, bottom. make the header align center

--- a/src/stylesheet/base/_variables.scss
+++ b/src/stylesheet/base/_variables.scss
@@ -17,6 +17,7 @@ $color: (
   grey-c: #5e5e62,
   grey-d: #fafafa,
   grey-e: #26272b,
+  grey-f: #e5e5e5,
   black: #000000,
   white: #ffffff,
   white-a: #e4e4e4,
